--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubot-munchie",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "author": "jmccance",
   "license": "MIT",
   "private": false,
@@ -21,6 +21,10 @@
   "scripts": {
     "build": "yarn run tsc",
     "bot": "yarn run build && yarn run hubot -n b",
-    "install": "yarn build"
-  }
+    "prepare": "yarn build"
+  },
+  "files": [
+    "index.coffee",
+    "scripts"
+  ]
 }
